apps/tochratana-template-nextjs-4045/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tochratana-template-nextjs-4045
  namespace: apps
spec:
  selector:
    app: tochratana-template-nextjs-4045
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
