apps/tochratana-template-nextjs-4045/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tochratana-template-nextjs-4045
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tochratana-template-nextjs-4045.tochratana.com
      secretName: tochratana-template-nextjs-4045-tls
  rules:
    - host: tochratana-template-nextjs-4045.tochratana.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tochratana-template-nextjs-4045
                port:
                  number: 80
